UPDATE posting spell and spellList logics